[package]
name = "session_vault"
version = "1.0.0"
authors = ["Marco <sun.dsk1@gmail.com>"]
edition = "2018"
repository = "https://github.com/brainstems/intellex_vesting_contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.0", default-features = false }
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
serde_json = "=1.0.66"
indexmap = "=1.6.2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dev-dependencies]
near-sdk-sim = "3.1.0"