[package]
name = "session_vault"
version = "1.0.0"
authors = ["Marco <sun.dsk1@gmail.com>"]
edition = "2018"
repository = "https://github.com/brainstems/intellex_vesting_contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.10.0", default-features = false }
near-sdk.workspace = true
near-contract-standards.workspace = true
serde_json = "=1.0.140"
indexmap = "=2.8.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[dev-dependencies]
near-workspaces.workspace = true
test_token.workspace = true
cargo-near-build.workspace = true
anyhow.workspace = true
tokio.workspace = true
