[package]
name = "vault"
version = "0.3.1"
authors = ["Marco <sun.dsk1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true
near-contract-standards.workspace = true
uint = { version = "0.10.0", default-features = false }
# fungible-token.workspace = true

[dev-dependencies]
# near-sdk-sim = "3.1.0"
test_token = { path = "../test_token" }
